--- a/angula/index.html
+++ b/angula/index.html
@@ -6,6 +6,7 @@
     <title>PORTAL DE NOTICÍAS GALACTIAS</title>
     <link rel="stylesheet" href="styles/card.css">
     <script src="src/components/CardNews.js" defer></script>
+    <script src="src/components/TituloDinamico.js"></script>
 </head>
 <body>
     <div class="conteier">
@@ -24,5 +25,7 @@
     </div>
 
     <card-news></card-news>
+
+    <Titulo-dinamico></Titulo-dinamico>
 </body>
 </html>
