--- a/angula/index.html
+++ b/angula/index.html
@@ -26,6 +26,7 @@
 
     <card-news></card-news>
 
-    <Titulo-dinamico></Titulo-dinamico>
+    <titulo-dinamico></titulo-dinamico>
+
 </body>
 </html>
