--- a/angula/index.html
+++ b/angula/index.html
@@ -6,10 +6,10 @@
     <title>PORTAL DE NOTICÍAS GALACTIAS</title>
     <link rel="stylesheet" href="styles/card.css">
     <script src="src/components/CardNews.js" defer></script>
-    <script src="src/components/TituloDinamico.js"></script>
 </head>
 <body>
     <div class="conteier">
+
         <div class="card">
             <div class="card__left">
                 <span>Autor desconhecido</span>
@@ -24,9 +24,13 @@
         </div>
     </div>
 
-    <card-news></card-news>
-
-    <titulo-dinamico></titulo-dinamico>
+    <card-news 
+        autor="Marianne"
+        title ="Darth Vader Contrata"
+        link-url ="www.google.com"
+        photo="img/download.jfif"
+        content="Darth varde procurar devs que sabem trabalhar com componentes."
+    ></card-news>
 
 </body>
 </html>
