--- a/angula/index.html
+++ b/angula/index.html
@@ -10,19 +10,6 @@
 <body>
     <div class="conteier">
 
-        <div class="card">
-            <div class="card__left">
-                <span>Autor desconhecido</span>
-                <h1>Darth vader contrata devs</h1>
-                <p>Darth varde procurar devs que sabem trabalhar com componentes</p>
-
-            </div>
-            <div class="card__ringht">
-                <img src="img/download.jfif" alt="Darth">
-
-            </div>
-        </div>
-    </div>
 
     <card-news 
         autor="Marianne"
@@ -31,6 +18,10 @@
         photo="img/download.jfif"
         content="Darth varde procurar devs que sabem trabalhar com componentes."
     ></card-news>
+    <card-news 
+        title ="Bob esponsa casa com patrick"
+        content="Casamento foi em Maldivas."
+></card-news>
 
 </body>
 </html>
