--- a/angula/index.html
+++ b/angula/index.html
@@ -8,6 +8,17 @@
     <script src="src/components/CardNews.js" defer></script>
 </head>
 <body>
+    <nav class="menu-desktop">
+        <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="sobre">Sobre</a></li>
+            <li><a href="espec">Especialidades</a></li>
+            <li><a href="projeto">Projetos</a></li>
+        </ul>
+    </nav>
+
+
+    
     <div class="conteier">
 
 
@@ -21,7 +32,31 @@
     <card-news 
         title ="Bob esponsa casa com patrick"
         content="Casamento foi em Maldivas."
-></card-news>
+    ></card-news>
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo.footer">
+                        <img src="img/tech.png" alt="logo">
+                    </div><!---line-foter-->
+        
+                    <div class="line-footer">
+                        <div class="btn-social">
+                            <a href="https://www.instagram.com/eu.desenvolvedora/" target="_blank" ><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://www.linkedin.com/in/marianne-andrade-ferreira92/" target="_blank" ><button><i class="bi bi-linkedin"></i></button></a>
+                            <a href="https://github.com/MarianneFerreira" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                        </div>
+                    </div><!---line-foter-->
+
+                </div>
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope"></i><a href="mailto:marianne.desenvolvedora@gmail.com">  Marianne.desenvolvedora@gmail.com</a></p>
+            </div>
+        </div>
+
+    </footer>
+
 
 </body>
 </html>
